--- a/html/home.html
+++ b/html/home.html
@@ -17,6 +17,9 @@
         margin: auto;
         display: block; 
       }
+      .secretButton {
+        background-color: "gray";
+      }
     </style>
   </head>
   <body>
